Temporarily increase signaling timeouts.

This is for signaling-timeout troubleshooting. Once rolled out, we will
see if telemetry reports a significant number of connections that
succeed but would have previously timed out, which will help narrow down
the cause.

Bug: 838711
Change-Id: I28a62ebfd46b9e896f6cba6a2c6ba4694205bd30
Reviewed-on: https://chromium-review.googlesource.com/1033626
Commit-Queue: Erik Jensen <rkjnsn@chromium.org>
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555200}
Former-commit-id: a05952012757e43447b70893ae7de07ace37e66a